--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
   </div>
   <footer class="footer">
-    <p>Created with <i class="fa fa-heart"></i> by Chirag Awasthi</p>
+    <p>Created with <i class="fa fa-heart"></i> by Jitin Kumar</p>
     <p>
       <a href="https://www.linkedin.com" target="_blank" class="link">
         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
